--- a/mocha.css
+++ b/mocha.css
@@ -41,7 +41,7 @@ body {
 
 #mocha .suite .suite h1 {
   margin-top: 0;
-  font-size: .8em;
+  font-size: 1em;
 }
 
 #mocha .hidden {
@@ -49,7 +49,7 @@ body {
 }
 
 #mocha h2 {
-  font-size: 12px;
+  font-size: 0.8em;
   font-weight: normal;
   cursor: pointer;
 }
@@ -78,7 +78,7 @@ body {
 
 #mocha .test.pass::before {
   content: '✓';
-  font-size: 12px;
+  font-size: 0.9em;
   display: block;
   float: left;
   margin-right: 5px;
@@ -123,7 +123,7 @@ body {
 
 #mocha .test.fail::before {
   content: '✖';
-  font-size: 12px;
+  font-size: 0.9em;
   display: block;
   float: left;
   margin-right: 5px;
@@ -132,7 +132,7 @@ body {
 
 #mocha .test pre.error {
   color: #c00;
-  max-height: 300px;
+  max-height: 50px;
   overflow: auto;
 }
 
