Add css modifications file

--- a/ourModifications.css
+++ b/ourModifications.css
@@ -1,3 +1,42 @@
+/* Used by elements with a class of hidden. No need to change. */
 .hidden {
    display: none;
+}
+
+/* Insert key-value pairs in the properties below, according to README.md */
+
+#main {
+
+}
+
+h3 {
+
+}
+
+#main li {
+
+}
+
+#main li:hover {
+
+}
+
+li .remove {
+
+}
+
+ul {
+
+}
+
+.edit {
+
+}
+
+input[type="button"] {
+
+}
+
+input[type="button"]:hover {
+
 }
