--- a/ourModifications.css
+++ b/ourModifications.css
@@ -6,10 +6,18 @@
 /* Insert key-value pairs in the properties below, according to README.md */
 
 #main {
-
+	margin: 10% 20%;
+	padding: 2em;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #9E9697;
 }
 
 h3 {
+	text-align: center;
+	font-size: 200%;
+	border-bottom-style: 2px dotted #9E9697;
+
 
 }
 
