--- a/ourModifications.css
+++ b/ourModifications.css
@@ -22,29 +22,45 @@ h3 {
 }
 
 #main li {
+	font-size: 115%;
+	padding: 0.2em;
+	list-style-type: none;
+	width: 100%;
+	margin:3px 0;
+	border: 2px solid black;
+	border-radius: 10px;
 
 }
 
 #main li:hover {
+	background-color: #AEE;
+
 
 }
 
 li .remove {
+	float: right;
+	line-height: 0.9em;
 
 }
 
 ul {
+	padding: 0;
 
 }
 
 .edit {
-
+	width: 100%;
 }
 
 input[type="button"] {
+	border:2px solid black;
+	background-color: #B47;
+	border-radius: 10px;
 
 }
 
 input[type="button"]:hover {
-
+	background-color: #A39;
+	border-color: blue;
 }
